--- a/package.json
+++ b/package.json
@@ -11,11 +11,13 @@
   "keywords": [],
   "dependencies": {
     "body-parser": "^1.20.2",
+    "cookie-parser": "^1.4.6",
     "crypto": "^1.0.1",
     "ejs": "^3.1.9",
     "express": "^4.18.2",
     "express-session": "^1.17.3",
     "fs": "^0.0.1-security",
+    "jsonwebtoken": "^9.0.0",
     "sqlite3": "^5.1.6"
   }
 }
