--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "keywords": [],
   "dependencies": {
     "body-parser": "^1.20.2",
+    "child_process": "^1.0.2",
     "cookie-parser": "^1.4.6",
     "crypto": "^1.0.1",
     "ejs": "^3.1.9",
@@ -18,6 +19,7 @@
     "express-session": "^1.17.3",
     "fs": "^0.0.1-security",
     "jsonwebtoken": "^9.0.0",
+    "multer": "^1.4.5-lts.1",
     "sqlite3": "^5.1.6"
   }
 }
