--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "keywords": [],
   "dependencies": {
     "body-parser": "^1.20.2",
+    "child_process": "^1.0.2",
     "cookie-parser": "^1.4.6",
     "crypto": "^1.0.1",
     "ejs": "^3.1.9",
