--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "iconv-lite": "^0.6.3",
     "jsonwebtoken": "^9.0.0",
     "multer": "^1.4.5-lts.1",
+    "net": "^1.0.2",
     "sqlite3": "^5.1.6"
   }
 }
